# semantic-versioning

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  run_linting.yaml
semantic_versioning/: __init__.py  _version.py  flags.py  patterns.py  semantic_version.py  specifier.py  utils.py
semversion/: __init__.py  _version.py  flags.py  semantic_version.py  utils.py
tests/: test_semantic_version.py  test_specifier.py
