[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "semversion"
description = "Annotation protocol to allow very thorough isinstance checks."
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "Jesse de Ruijter", email = "jessederuijter@gmail.com" },
]
dependencies = []
optional-dependencies.dev = ["pytest", "black", "pre-commit", "isort", "bandit==1.7.0", "flake8"]
dynamic = ["version"]

[tool.setuptools]
packages.find.include = ["semversion*"]
dynamic.version.attr = "semversion._version.__version__"

[tool.black]
line-length = 99

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"tests/*" = ["D102", "PLR2004", "S101"]
"semversion/patterns.py" = ["E501"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::semversion.*",
]
