[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-versioning"
description = "A package for easily managing Semantic versions as described in PEP440."
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "Jesse de Ruijter", email = "jessederuijter@gmail.com" },
]
dependencies = []
optional-dependencies.dev = ["pytest", "black", "pre-commit", "isort", "bandit==1.7.0", "flake8"]
dynamic = ["version"]

[tool.setuptools]
packages.find.include = ["semantic_versioning*"]
dynamic.version.attr = "semantic_versioning._version.__version__"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
target-version = "py310"
select = ["ALL"]
ignore = ["ANN101", "ANN102", "D100", "D101", "PERF203"]
ignore-init-module-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN201", "D101", "D102", "D104", "PLR2004", "S101"]
"semantic_versioning/patterns.py" = ["E501"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::semantic_versioning.*",
]
